# Multiphase-Pressure-Losses-Simulation

./: CMakeLists.txt  LICENSE  README.md  main
headers/: byphasic_model.hpp  pipe_geometry.hpp  solver.hpp
source/: byphasic_model.cpp  main.cpp  pipe_geometry.cpp  pipe_solver.cpp
